<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:fontFamily="@font/merriweather"
        android:gravity="center"
        android:text="@string/filmku"
        android:textAlignment="center"
        android:textColor="#110E47"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather"
            android:text="@string/now_showing"
            android:textAlignment="textStart"
            android:textColor="#110E47"
            android:textStyle="bold"
            android:layout_weight="4"/>


        <Button
            android:layout_width="113dp"
            android:layout_height="42dp"
            android:background="@drawable/buttonshape"
            android:text="@string/see_more"
            android:textColor="#D2D2D2"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_weight="1"

            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintBounds">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_1" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/spiderman_no_way_home"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        tools:ignore="VisualLintBounds" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:minHeight="30dp"
                        >

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/star"
                            android:layout_marginLeft="15dp"
                            android:minHeight="30dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="9.1/10 IMDb"
                            android:textColor="#D2D2D2"
                            android:minHeight="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_2" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/eternals"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        tools:ignore="VisualLintBounds" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:minHeight="30dp"
                        >

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/star"
                            android:layout_marginLeft="15dp"
                            android:minHeight="30dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="9.5/10 IMDb"
                            android:textColor="#D2D2D2"
                            android:minHeight="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_1" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:text="@string/spiderman_no_way_home"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        tools:ignore="VisualLintBounds" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:minHeight="30dp"
                        >

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/star"
                            android:layout_marginLeft="15dp"
                            android:minHeight="30dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="9.1/10 IMDb"
                            android:textColor="#D2D2D2"
                            android:minHeight="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather"
            android:text="@string/popular"
            android:textAlignment="textStart"
            android:textColor="#110E47"
            android:textStyle="bold"
            android:layout_weight="4"/>


        <Button
            android:layout_width="113dp"
            android:layout_height="42dp"
            android:background="@drawable/buttonshape"
            android:text="@string/see_more"
            android:textColor="#D2D2D2"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_weight="1"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_4"
                        android:minHeight="30dp"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:text="@string/venom_let_there_be_carnage"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="VisualLintBounds"
                        android:layout_marginBottom="10dp"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/star"

                            android:minHeight="30dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="6.4/10 IMDb"
                            android:textColor="#D2D2D2"
                            android:minHeight="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button14"
                            android:layout_width="60dp"
                            android:layout_height="20dp"
                            android:text="Comedy"
                            android:textSize="6sp"
                            android:background="#DBE3FF"
                            android:layout_marginRight="20dp"
                            android:textColor="#88A4E8"
                            />

                        <Button
                            android:id="@+id/button8"
                            android:layout_width="60dp"
                            android:layout_height="20dp"
                            android:text="Mystory"
                            android:textSize="6sp"
                            android:background="#DBE3FF"
                            android:textColor="#88A4E8"

                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_4"
                        android:minHeight="30dp"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:text="@string/venom_let_there_be_carnage"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="VisualLintBounds"
                        android:layout_marginBottom="10dp"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/star"

                            android:minHeight="30dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="6.4/10 IMDb"
                            android:textColor="#D2D2D2"
                            android:minHeight="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button15"
                            android:layout_width="60dp"
                            android:layout_height="20dp"
                            android:text="Comedy"
                            android:textSize="6sp"
                            android:background="#DBE3FF"
                            android:layout_marginRight="20dp"
                            android:textColor="#88A4E8"
                            />

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="60dp"
                            android:layout_height="20dp"
                            android:text="Mystory"
                            android:textSize="6sp"
                            android:background="#DBE3FF"
                            android:textColor="#88A4E8"

                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <![CDATA[
    />
]]>
</LinearLayout>